<resources>
    <string name="app_name">作業九:杜晉宇</string>
    <string name="inputButton">輸入</string>
    <string name="recordButton">紀錄</string>
    <string name="itemText">項目：</string>
    <string name="dateText">日期：</string>
    <string name="costText">金額：</string>
    <array name="mealList">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </array>
</resources>
