<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/itemText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="46dp"
        android:layout_marginTop="19dp"
        android:entries="@array/mealList"
        app:layout_constraintBottom_toTopOf="@+id/dpkDataPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:text="@string/dateText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dpkDataPicker"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType=""
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/dpkDataPicker"
        app:layout_constraintStart_toEndOf="@+id/dateText" />

    <DatePicker
        android:id="@+id/dpkDataPicker"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="132dp"
        android:calendarViewShown="?android:attr/windowOverscan"
        android:datePickerMode="spinner"
        android:headerBackground="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cldCalendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

    </DatePicker>

    <CalendarView
        android:id="@+id/cldCalendar"
        android:layout_width="190dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/dpkDataPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dpkDataPicker"
        app:layout_constraintTop_toTopOf="@+id/dpkDataPicker"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/costText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:text="@string/costText"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editCost"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dpkDataPicker"
        app:layout_constraintTop_toBottomOf="@+id/dpkDataPicker" />

    <EditText
        android:id="@+id/editCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpkDataPicker" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpkDataPicker">

        <Button
            android:id="@+id/inputButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inputButton" />

        <Button
            android:id="@+id/recordButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recordButton" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>